# FileScope

./: Cargo.toml  README.md  build.rs
src/: main.rs
ui/: app-window.slint
