[package]
name = "FileScope"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.10.0"
rfd = "0.15.2"
slint = "1.9.2"
walkdir = "2.5.0"
winresource = "0.1.19"

[build-dependencies]
slint-build = "1.9.2"
winresource = "0.1.19"
